--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,23 @@
     "deploy": "npm run build"
   },
   "dependencies": {
+    "@farcaster/auth-kit": "^0.8.1",
+    "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.12.2",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "axios": "^1.12.2"
+    "viem": "^2.38.4",
+    "wagmi": "^2.18.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "tailwindcss": "^4",
-    "@tailwindcss/postcss": "^4",
     "typescript": "^5"
   }
 }
