Deploy contracts live

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -9,7 +9,7 @@ NEXT_PUBLIC_CHAIN_ID=8453
 NEXT_PUBLIC_CHAIN_NAME=Base
 
 # Smart Contract Addresses (update after deployment)
-NEXT_PUBLIC_STEAK_TOKEN_ADDRESS=0x...
+NEXT_PUBLIC_STEAK_TOKEN_ADDRESS=0x1C96D434DEb1fF21Fc5406186Eef1f970fAF3B07
 NEXT_PUBLIC_STEAKNSTAKE_CONTRACT_ADDRESS=0x...
 
 # Wallet Connection
