--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -1,4 +1,5 @@
 # Cloudflare Pages Configuration for SteakNStake Frontend
+# Updated for deployment fix
 
 name = "steaknstake"
 compatibility_date = "2024-10-24"
