--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@farcaster/auth-kit": "^0.8.1",
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "next": "15.5.6",
