--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,7 @@
     "pg": "^8.11.3",
     "viem": "^2.38.3",
     "winston": "^3.13.0",
-    "@farcaster/hub-nodejs": "^0.11.2",
-    "node-fetch": "^2.7.0"
+    "@farcaster/hub-nodejs": "^0.11.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
