--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.11.3",
     "viem": "^2.38.3",
     "winston": "^3.13.0",
-    "@farcaster/hub-nodejs": "^0.11.2"
+    "@farcaster/hub-nodejs": "^0.11.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "jest": "^29.7.0",
