--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@farcaster/hub-nodejs": "^0.11.2",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
+    "ethers": "^6.15.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
     "viem": "^2.38.3",
-    "winston": "^3.13.0",
-    "@farcaster/hub-nodejs": "^0.11.2"
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
