fix wrangler output dir

--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -3,7 +3,7 @@
 
 name = "steaknstake"
 compatibility_date = "2024-10-24"
-pages_build_output_dir = "out"
+pages_build_output_dir = ".next"
 
 [env.production]
 name = "steaknstake-production"
