--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -2,8 +2,8 @@
 # Updated for deployment fix
 
 name = "steaknstake"
-compatibility_date = "2024-10-24"
-pages_build_output_dir = ".next"
+compatibility_date = "2025-10-28"
+pages_build_output_dir = "out"
 
 [env.production]
 name = "steaknstake-production"
